Add prefetch command
Signed-off-by: Hoa Nguyen <hn@hnpl.org>

--- a/spmv/Makefile
+++ b/spmv/Makefile
@@ -9,18 +9,18 @@ OUTPUT_SUFFIX=.hw
 PICKLEDEVICE_SUFFIX=.pdev
 GEM5_SUFFIX=.m5
 
-CXX_FLAGS += -lpickledevice -Wfatal-errors
+CXXFLAGS += -lpickledevice -Wfatal-errors
 LDFLAGS   += -lpickledevice
 ifeq ($(ENABLE_PICKLEDEVICE), 1)
-  CXX_FLAGS += -DENABLE_PICKLEDEVICE=1
+  CXXFLAGS += -DENABLE_PICKLEDEVICE=1
   LDFLAGS   += -DENABLE_PICKLEDEVICE=1
   TMP_OUTPUT_SUFFIX = $(OUTPUT_SUFFIX)
   OUTPUT_SUFFIX := $(TMP_OUTPUT_SUFFIX)$(PICKLEDEVICE_SUFFIX)
 endif
 
 ifeq ($(ENABLE_GEM5), 1)
-  CXX_FLAGS += -I$(M5OPS_HEADER_PATH) -I$(M5OPS_HEADER_PATH)/../util/m5/src
-  CXX_FLAGS += -DENABLE_GEM5=1
+  CXXFLAGS += -I$(M5OPS_HEADER_PATH) -I$(M5OPS_HEADER_PATH)/../util/m5/src
+  CXXFLAGS += -DENABLE_GEM5=1
   LDFLAGS   += -lm5 -L$(M5_BUILD_PATH)/out/
   LDFLAGS   += -DENABLE_GEM5=1
   TMP_OUTPUT_SUFFIX = $(OUTPUT_SUFFIX)
