Now we convert .gr files to .csr as well
Signed-off-by: Hoa Nguyen <hn@hnpl.org>

--- a/utils/Makefile
+++ b/utils/Makefile
@@ -1,10 +1,10 @@
 CXX = g++
 CXXFLAGS = -O3 -std=c++17
 
-all: mtx_to_csr
+all: to_csr
 
-mtx_to_csr: mtx_to_csr.cpp
-	$(CXX) $(CXXFLAGS) -o mtx_to_csr.hw mtx_to_csr.cpp
+to_csr: to_csr.cpp
+	$(CXX) $(CXXFLAGS) -o to_csr.hw to_csr.cpp
 
 clean:
-	rm -f mtx_to_csr.hw
+	rm -f to_csr.hw
